Style rating boxes and other elements to match design.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,74 +1,118 @@
 /* Global Styles */
 * {
+  font-family: 'Spartan', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Spartan', sans-serif;
+
+}
+
+body {
+  background-image: url(../images/bg-pattern-top-desktop.svg) top right no-repeat;
   font-size: 15px;
-  color: #511f50; /* fallback color */
+  line-height: 1.5rem;
+  color: #511f50;
+  /* fallback color */
   color: hsl(300, 43%, 22%);
   text-align: left;
 }
 
-body {
-  background-color: #fff;
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
 }
 
-h1 {
-  font-size: 3.5rem;
+.container {
+  padding: 8% 8%;
+}
+
+/* Title Area */
+.description {
+  max-width: 430px;
+}
+
+/* Ratings */
+.rating-box {
+  background-color: #f7f2f8;
+  /* fallback color*/
+  background-color: hsl(303, 24%, 96%);
+  color: #511f50;
+  /* fallback color */
+  color: hsl(300, 43%, 22%);
+  font-size: .8rem;
+  font-weight: 700;
+  margin: 1%;
+  padding: 20px 10%;
+}
+
+.star-group {
+  margin-right: 5%;
 }
 
 /* Quote Boxes */
 .quote-box {
-  background-color: #511f50; /* fallback color */
+  background-color: #511f50;
+  /* fallback color */
   background-color: hsl(300, 43%, 22%);
+  margin-top: 20%;
   padding: 10%;
   border-radius: 10px;
+  min-width: 255px;
+}
+
+.card-header {
+  padding: 0 0 1.5rem 0;
 }
 
 .identity {
-  padding: 0;
-  line-height: .7rem;
+  padding: 8px 0 0 0;
+  line-height: .5rem;
 }
 
 .portrait {
   border-radius: 100%;
   float: left;
+  margin-right: 20px;
+  width: 42px;
 }
 
 .person {
-  color: #caa2c8; /* fallback color */
-  color: hsl(303, 10%, 53%);
+  color: #fff;
+  /* fallback color */
+  color: hsl(0, 0%, 100%);
   font-weight: 700;
 }
 
 .verified {
-  color: #ab2260; /* fallback color */
+  color: #ab2260;
+  /* fallback color */
   color: hsl(333, 80%, 67%);
-  font-weight: 400;
 }
 
 .quote {
-  color: #f5baf5; /* fallback color */
-  color: hsl(303, 10%, 53%);
+  color: #fff;
+  /* fallback color */
+  color: hsl(0, 0%, 100%);
+  margin-bottom: 0;
 }
-
 
 /* Attribution */
 .attribution {
   font-size: 11px;
   text-align: center;
 }
+
 .attribution a {
-  color: #3e4870; /* Fallback color */
+  color: #3e4870;
+  /* Fallback color */
   color: hsl(228, 45%, 44%);
 }
 
 /* Media Queries */
-/* @media (max-width: 980px) {
+/* @media (max-width: 375px) {
   .firstBox {
     border-radius: 1rem 1rem 0 0;
   }
